review: guard colour scheme against orphaned keys, safer listener add
Feedback round on #2239: the scheme consistency test now requires a
consumer for every bundled key, colour listeners register null-safe and
idempotent, and small test idiom cleanups (assertTrue, getFirst).